# cursor-latex-zotero-template

./: .gitignore  CLAUDE.md  README.md  main.py  main.tex  pyproject.toml  test_docling.py
.cursor/: cli.json
.cursor/rules/: setup_explanation.mdc
bib/: labels.bib  refs.bib
bib/christiano2022/: .metadata.txt  christiano2022_fulltext.md
bib/greenblatt2024/: .metadata.txt  greenblatt2024_fulltext.md
bib/schulz2024/: .metadata.txt  schulz2024_fulltext.md
bib/turner2023/: .metadata.txt  turner2023_fulltext.md
bib/turner2025/: .metadata.txt  turner2025_fulltext.md
bib/yudkowsky2008/: .metadata.txt  yudkowsky2008_fulltext.md
bib/yudkowsky2022/: .metadata.txt  yudkowsky2022_fulltext.md
bib/zotero-item-166/: .metadata.txt  zotero-item-166_fulltext.md
content/01_abstract/: chapter.tex  notes.md
content/02_introduction/: chapter.tex  notes.md
content/03_methods/: chapter.tex  notes.md
content/04_results/: chapter.tex  notes.md
content/05_conclusion/: chapter.tex  notes.md
content/06_discussion/: chapter.tex  notes.md
content/07_appendix/: chapter.tex  notes.md
lib/: packages.tex  settings.tex
literature_check/01_abstract/: citations_overview.json
literature_check/02_introduction/: citations_overview.json
literature_check/03_methods/: citations_overview.json
literature_check/04_results/: citations_overview.json
scripts/: config.yaml  create_chapters.py  create_pr.sh  main.py  reset_literature.sh  selective_merge.sh  setup.sh  setup_zotero.sh  sync_from_template.sh  zotero_collection_sync.sh  zotero_sync.py
scripts/bib/: labels.bib
(+184 files in other folders)
