[project]
name = "claude-latex-zotero-template"
version = "0.1.0"
description = "Academic writing template with Claude Code, LaTeX, and Zotero integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf",
    "beautifulsoup4",
    "markdownify",
    "pyyaml",
    "requests>=2.32.4",
    "docling>=2.42.0",
    "chromadb>=1.0.15",
    "sentence-transformers>=5.0.0",
]
